# veritail

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  contributing.md  pyproject.toml
.github/workflows/: ci.yml
docs/: autocomplete-evaluation.md  autocorrect-evaluation.md  backends.md  batch-mode-and-resume.md  cli-reference.md  custom-checks.md  custom-rubrics.md  development.md  enterprise-context.md  enterprise-instructions.md  evaluation-model.md  index.html  llm-usage-and-cost.md  style.css  supported-llm-providers.md
example/: .env.example  README.md  adapter.py  example_adapter.py  example_queries.csv  prefixes.csv  queries.csv  suggest_adapter.py
src/search_eval/: __init__.py  adapter.py  cli.py  pipeline.py  queries.py  types.py
src/search_eval/backends/: __init__.py  file.py  langfuse.py
src/search_eval/checks/: __init__.py  comparison.py  query_level.py  result_level.py
src/search_eval/llm/: __init__.py  judge.py
src/search_eval/metrics/: __init__.py  agreement.py  ir.py
src/search_eval/reporting/: __init__.py  comparison.py  single.py
src/search_eval/reporting/templates/: report.html
src/search_eval/rubrics/: __init__.py  ecommerce_default.py
src/veritail/: __init__.py  adapter.py  batch_utils.py  checkpoint.py  cli.py  logging.py  pipeline.py  queries.py  querygen.py  scaffold.py  types.py
src/veritail/autocomplete/: __init__.py  adapter.py  checks.py  comparison.py  judge.py  metrics.py  pipeline.py  prefixgen.py  queries.py  reporting.py
src/veritail/backends/: __init__.py  file.py  langfuse.py
src/veritail/checks/: __init__.py  comparison.py  correction.py  custom.py  query_level.py  result_level.py
src/veritail/llm/: __init__.py  classifier.py  client.py  judge.py
src/veritail/metrics/: __init__.py  agreement.py  bootstrap.py  ir.py
src/veritail/prompts/: __init__.py  querygen.md
src/veritail/prompts/autocomplete/: suggestion.md
src/veritail/prompts/llm/: classification.md  correction.md
src/veritail/prompts/reporting/: comparison_summary.md  summary.md
src/veritail/prompts/rubrics/: ecommerce_default.md
src/veritail/prompts/verticals/automotive/: core.md
src/veritail/prompts/verticals/automotive/overlays/: accessories_and_tools.md  batteries_starting_charging.md  body_collision_paint_glass.md  brakes_and_friction.md  engine_ignition_and_sensors.md  exhaust_and_emissions.md  fluids_and_chemicals.md  general.md  hvac_air_conditioning.md  lighting_and_visibility.md  oil_change.md  suspension_steering_and_hubs.md  wheels_tires_tpms.md
src/veritail/prompts/verticals/beauty/: core.md
src/veritail/prompts/verticals/beauty/overlays/: acne_and_breakouts.md  body_care_personal.md  brightening_dark_spots.md  cheek_color_contour.md  cleansers_makeup_removal.md  complexion_makeup.md  exfoliants_peels.md  eye_makeup.md  fragrance.md  gift_sets_kits.md  hair_color_toning.md  hair_styling_and_tools.md  hydration_barrier_repair.md  lip_products.md  makeup_tools.md  masks_and_treatments.md  nails.md  retinoids_antiaging.md  shampoo_conditioner.md  sunless_tanning.md  sunscreen_spf.md  textured_curl_hair.md
src/veritail/prompts/verticals/electronics/: core.md
src/veritail/prompts/verticals/electronics/overlays/: camera_lenses.md  cameras_and_kits.md  charging_cables_and_adapters.md  device_specific_protection.md  external_storage.md  (+26 more)
src/veritail/prompts/verticals/fashion/: core.md
src/veritail/prompts/verticals/foodservice/: core.md
src/veritail/prompts/verticals/furniture/: core.md
src/veritail/prompts/verticals/groceries/: core.md
src/veritail/prompts/verticals/home_improvement/: core.md
src/veritail/prompts/verticals/industrial/: core.md
src/veritail/prompts/verticals/marketplace/: core.md
src/veritail/prompts/verticals/medical/: core.md
src/veritail/prompts/verticals/office_supplies/: core.md
src/veritail/prompts/verticals/pet_supplies/: core.md
src/veritail/prompts/verticals/sporting_goods/: core.md
src/veritail/reporting/: __init__.py  comparison.py  single.py  styles.py  summary.py
src/veritail/reporting/templates/: autocomplete_report.html  report.html
src/veritail/rubrics/: __init__.py  ecommerce_default.py
src/veritail/verticals/: __init__.py  automotive.py  beauty.py  electronics.py  fashion.py  foodservice.py  furniture.py  groceries.py  home_improvement.py  industrial.py  marketplace.py  medical.py  office_supplies.py  pet_supplies.py  sporting_goods.py
tests/: conftest.py  test_adapter.py  test_batch_utils.py  test_checkpoint.py  test_cli.py  test_llm_retry.py  test_logging.py  test_pipeline.py  test_prompts.py  test_queries.py  test_querygen.py  test_rubrics.py  test_types.py  test_verticals.py
tests/test_autocomplete/: test_adapter.py  test_checks.py  test_comparison.py  test_metrics.py  test_pipeline.py  test_prefixgen.py  test_queries.py  test_reporting.py  test_suggestion_judge.py
tests/test_backends/: test_file.py  test_langfuse.py
tests/test_checks/: test_comparison.py  test_correction.py  test_custom.py  test_query_level.py  test_result_level.py
tests/test_llm/: test_batch_client.py  test_classifier.py  test_client.py  test_correction_judge.py  test_judge.py
tests/test_metrics/: test_agreement.py  test_bootstrap.py  test_ir.py
tests/test_reporting/: test_comparison.py  test_single.py  test_summary.py
(+167 files in other folders)
