[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veritail"
version = "0.1.0"
description = "Ecommerce search relevance evaluation tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Ahmed Arnaout" },
]
keywords = ["search", "ecommerce", "evaluation", "relevance", "ndcg", "information-retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "click>=8.0",
    "anthropic>=0.39.0",
    "openai>=1.0",
    "jinja2>=3.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
langfuse = ["langfuse>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[project.scripts]
veritail = "veritail.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/veritail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/veritail/verticals/*.py" = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
